@@ -1,3 +1,10 @@
+Oct 26, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- cleanup q3_exec:
+  - protocol dependant launching no longer requires full path, will search $PATH
+  - do not check for valid mod dir for games other than q3a
+  - do not check for punkbuster for games other than q3a
+  - pass all options as separate arguments
+
 Oct 25, 2002: Alex <alex_b@users.sourceforge.net>
 - Segfault fix - q3_exec - launch game even if it doesn't respond to refresh
 - Tooltip updates
